--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "lint": "esw \"**/*.js\"",
     "lint-fix": "esw \"**/*.js\" --fix",
-    "test": "npm run lint && jest --coverage",
-    "coverage": "codecov -f coverage/coverage-final.json"
+    "test": "npm run lint && nyc jasmine",
+    "coverage": "nyc report --reporter=json && codecov -f coverage/coverage-final.json"
   },
   "repository": {
     "type": "git",
@@ -24,16 +24,24 @@
   "homepage": "https://github.com/mgonnet/umpire-client#readme",
   "devDependencies": {
     "@types/jest": "^24.0.13",
+    "chess.js": "^0.10.2",
     "codecov": "^3.5.0",
     "eslint": "^5.16.0",
     "eslint-config-standard": "^12.0.0",
     "eslint-plugin-import": "^2.17.3",
+    "eslint-plugin-jasmine": "^2.10.1",
     "eslint-plugin-jest": "^22.6.4",
     "eslint-plugin-jsdoc": "^7.0.2",
     "eslint-plugin-node": "^9.1.0",
     "eslint-plugin-promise": "^4.1.1",
     "eslint-plugin-standard": "^4.0.0",
     "eslint-watch": "^5.1.2",
-    "jest": "^24.8.0"
+    "jasmine": "^3.4.0",
+    "jest": "^24.8.0",
+    "nyc": "^14.1.1"
+  },
+  "dependencies": {
+    "@mgonnet/umpire": "^0.4.5",
+    "ws": "^7.0.0"
   }
 }
