should reject with a reason when the server rejects a user

--- a/package.json
+++ b/package.json
@@ -38,10 +38,12 @@
     "eslint-watch": "^5.1.2",
     "jasmine": "^3.4.0",
     "jest": "^24.8.0",
-    "nyc": "^14.1.1"
+    "nyc": "^14.1.1",
+    "promise-matchers": "^0.9.6"
   },
   "dependencies": {
-    "@mgonnet/umpire": "^0.4.5",
+    "@mgonnet/umpire": "^0.4.6",
+    "promise-matchers": "^0.9.6",
     "ws": "^7.0.0"
   }
 }
